<resources>
    <string name="app_name">SettingsPage</string>
    <string name="preference1_key">preference1</string>
    <string name="preference2_key">preference2</string>
    <string name="preference3_key">preference3</string>
    <string name="settingPage1">Settings Page 1</string>
    <string name="settingPage2">Settings Page 2</string>
    <string name="settings_1.0">Settings Group 1.0</string>
    <string name="settings_1.1">Settings Group 1.1</string>
    <string name="settings_1.2">Settings Group 1.2</string>
    <string name="edit_text_preference">Edit Text Preference</string>
    <string name="edit_text_key">edit_text_key</string>
    <string name="checkbox_preference">Check Box Preference</string>
    <string name="checkbox_key">checkbox_key</string>
    <string name="checkbox2_preference">Check Box2 Preference</string>
    <string name="checkbox2_key">checkbox2_key</string>
    <string name="switch_preference">Switch Preference</string>
    <string name="switch_key">switch_key</string>
    <string name="switch2_preference">Switch2 Preference</string>
    <string name="switch2_key">switch2_key</string>
    <string name="subscreen">Subscreen</string>
    <string name="ringtone_subscreen_preference">Ringtone Preference</string>
    <string name="ringtone_subscreen_key">ringtone_key</string>
    <string name="list_preference">List Preference</string>
    <string name="list_key">list_key</string>
    <string-array name="options_list_preference">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <item>Option 4</item>
    </string-array>
    <string-array name="options_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="open_fragment">Open Fragment</string>
    <string name="open_activity">Open Activity</string>
</resources>
